# insbot

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  DEPLOY.md  Dockerfile  PRD_Sistem_Inspeksi_Kendaraan.md  README.md  conftest.py  docker-compose.yml  frappe-docker.yml  pyproject.toml
.kiro/specs/telegram-inspection-bot/: .config.kiro  design.md  requirements.md  tasks.md
src/bot/: __init__.py  auth_middleware.py  bot_runner.py  config.py  logging.py  session_middleware.py  webhook.py
src/bot/adapters/: __init__.py  exceptions.py  frappe.py  photos.py  redis_store.py
src/bot/domain/: __init__.py  checklist.py  fsm.py  models.py  payload.py  progress.py  stnk.py  validation.py
src/bot/handlers/: __init__.py  checklist.py  commands.py  motor_selection.py  photos.py  stnk.py  submit.py  summary.py  text_router.py
tests/integration/: __init__.py
tests/unit/: test_auth_middleware.py  test_checklist.py  test_commands.py  test_config.py  test_logging.py  test_motor_selection.py  test_payload.py  test_photos.py  test_redis_store.py  test_session_middleware.py  test_stnk.py  test_stnk_handler.py  test_submit.py  test_summary_handler.py  test_webhook.py
