[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegram-inspection-bot"
version = "0.1.0"
description = "Telegram Inspection Bot — middleware aiogram yang menjembatani Frappe ERPNext dengan inspektor lapangan"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "aiogram>=3.4,<4.0",
    "aiohttp>=3.9,<4.0",
    "redis[hiredis]>=5.0,<6.0",
    "Pillow>=10.0,<11.0",
    "pydantic-settings>=2.0,<3.0",
    "structlog>=24.0,<25.0",
    "cachetools>=5.0,<6.0",
]

[project.optional-dependencies]
test = [
    "hypothesis>=6.0,<7.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.0",
    "aresponses>=2.1",
]
dev = [
    "telegram-inspection-bot[test]",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
